tests/lean/macroElabRulesIssue2.lean.expected.out
macroElabRulesIssue2.lean:22:2-22:12: error: Failed at elab_rules
